<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/dupla_1_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="incrementScoreA">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dupla_1"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/score_1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dupla_2_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:padding="40dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="incrementScoreB">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dupla_2"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score_2_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dupla_3_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="40dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="incrementSocreC"
        android:layout_marginBottom="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dupla_3"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/score_3_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dupla_4_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:padding="40dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="incrementSocreD"
        android:layout_marginBottom="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dupla_4"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/score_4_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_init"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/zerar_placar"
        android:textAllCaps="true"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@android:color/darker_gray"
        android:onClick="resetScores"/>

</RelativeLayout>